Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.13
-
None
Description
For DirectShow and Angle flushMode does not work.
Due to IDirect3DSurface9::LockRect returns D3DLOCKED_RECT with Pitch
(number bytes in the row) higher than width * bytes in pixel.
And useless to copy video frame with texture id.
Attachments
Issue Links
- relates to
-
QTBUG-37301 Qml videoplayer playback position when playback finished
-
- Closed
-
For Gerrit Dashboard: QTBUG-71610 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
244730,3 | DirectShow: Stop surface on EndOfStream | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
246026,3 | Fix conversion from QVideoFrame to QImage to respect bytesPerLine | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
246037,3 | VideoOutput: Download data of flush video frame if it has a handle | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |