DirectShow: Stop surface on EndOfStream

Surface should be stopped to flush video frame.

Task-number: QTBUG-71610
Change-Id: I1d7b4e0c1c04ebfbf764ffc8621a7028dd88f22d
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>